Sat Oct 16 21:50:28 1999  Jeffrey A Law  (law@cygnus.com)

	* haifa-sched.c (schedule_insns): Do not remove inter-block
	dependencies anymore.

Sat Oct 16 11:19:52 1999  Richard Henderson  <rth@cygnus.com>

	* i386/t-cygwin (winnt.o): Depend on RTL_H and TREE_H.
	* i386/t-winnt: Likewise.

Sat Oct 16 11:11:54 1999  Richard Henderson  <rth@cygnus.com>

	* ggc-page.c (init_ggc): Work around SunOS unaligned mmap bug.

1999-10-16  Manfred Hollstein  <mhollstein@cygnus.com>

	* Makefile.in (LANGUAGES): Omit "proto".
	(clean): Remove stale comment about removing unprotoize.c.

Sat Oct 16 11:29:14 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* protoize.c (safe_read, safe_write): Avoid the gcc extension of
	using arithmetic on void pointers.

Sat Oct 16 02:48:22 1999  Jeffrey A Law  (law@cygnus.com)

	* haifa-sched.c (compute_block_forward_dependencies): Only check
	for notes, deleted insns and duplicates if ENABLE_CHECKING is defined.

Sat Oct 16 00:07:01 1999  Richard Henderson  <rth@cygnus.com>

	* gcse.c (hash_expr_1): Add in MEM_ALIAS_SET.
	(expr_equiv_p): Reject memories with different alias sets.

Fri Oct 15 15:17:29 1999  Greg McGary  <gkm@gnu.org>

	* flags.h (flag_bounds_check, flag_bounded_pointers): New extern decls.
	* toplev.c (flag_bounds_check, flag_bounded_pointers): New flags.
	(f_options): Add "bounded-pointers" and "bounds-check" entries.
	* c-lang.c (lang_init_options): Set flag_bounds_check as "unspecified".
	(lang_init): Set default for flag_bounds_check if still "unspecified".

Sat Oct 16 13:42:29 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* config/c4x/c4x.md (HF mode patterns):  Add missing modes.

Sat Oct 16 13:37:46 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* config/c4x/c4x.md (movstrqi_small): Utilise parallel move
	instructions.

Sat Oct 16 13:26:47 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* config/c4x/c4x.md (*db_noclobber, 
	*decrement_and_branch_until_zero_noclobber): New patterns and 